fix offcenter imgs

--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     height: 50vh;
     width: 80vh;
 }
